--- a/Team_41_Final_Report.html
+++ b/Team_41_Final_Report.html
@@ -14260,8 +14260,8 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="CS-598-Deep-Learning-for-HealthCare---Final-Project">CS 598 Deep Learning for HealthCare - Final Project<a class="anchor-link" href="#CS-598-Deep-Learning-for-HealthCare---Final-Project">&#182;</a></h1><p><strong><em>Team 41</em></strong></p>
-<p>Indranil Guha| Iguha4@illinois.edu<br>
-Snehangshu Bhattacharjee | sb8@illinois.edu</p>
+<p>Indranil Guha| iguha4@illinois.edu<br>
+Snehangshu Bhattacharjee | ssb8@illinois.edu</p>
 
 </div>
 </div>
